--- a/style.css
+++ b/style.css
@@ -19,7 +19,14 @@ body {
         "slnt" 0;
 }
 
-.hero-image {
+.hero-h1 {
+    padding: 20px;
+    font-family: "Afacad Flux", sans-serif;
+    text-align: center;
+}
+
+.main-image {
+    background-image: url(https://images.selfridges.com/is/image/selfridges/190708_ReformationArtboard_3_MOBILE?scl=1&qlt=60,1);
     background-size: cover;
     background-position: center;
     display: flex;
@@ -27,51 +34,56 @@ body {
     align-items: center;
     justify-content: center;
     color: rgb(7, 7, 7);
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
 }
 
-.hero-h1 {
-    padding: 20px;
-    font-family: "Afacad Flux", sans-serif;
-    text-align: center;
-}
-
+/* Typography */
 
 h1 {
     font-size: 48px;
-    /* Very prominent */
     line-height: 1.2;
-    /* Adjust line-height for readability */
     margin-bottom: 20px;
 }
 
 h2 {
     font-size: 36px;
-    /* Secondary importance */
     line-height: 1.3;
     margin-bottom: 16px;
 }
 
 h3 {
     font-size: 28px;
-    /* Tertiary importance */
     line-height: 1.4;
     margin-bottom: 12px;
 }
 
+p {
+    margin: 5px 0;
+    font-family: "Afacad Flux", sans-serif;
+}
+
+h4 {
+    margin-top: 10px;
+    font-size: 16px;
+    color: #444;
+}
+
+
+/* Navigation bar  */
 
 .navbar {
     display: grid;
     justify-content: space-around;
-    margin-bottom: 2dv;
     font-family: "Afacad Flux", sans-serif;
+    margin: 25px;
 }
-
 
 .nav-links li {
     display: inline;
     font-size: 18px;
 }
-
 
 .nav-links {
     list-style: none;
@@ -96,9 +108,36 @@ h3 {
     border-radius: 4px;
 }
 
+.hamburger-menu {
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25px;
+    height: 20px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.hamburger-menu .bar {
+    width: 100%;
+    height: 3px;
+    background-color: #333;
+    border-radius: 2px;
+}
 
 
+/* Container */
+.container {
+    text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 25px;
+}
 
+.container h2 {
+    padding: 25px;
+}
 
 .card {
     display: flex;
@@ -125,59 +164,60 @@ h3 {
     max-width: 100%;
 }
 
-p {
-    margin: 5px 0;
-    font-family: "Afacad Flux", sans-serif;
+.grid {
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
 }
 
-h4 {
+.item {
+    text-align: center;
+}
+
+.item img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    border-radius: 5px;
+    transition: transform 0.3s ease;
+}
+
+.item img:hover {
+    transform: scale(1.05);
+}
+
+.item p {
     margin-top: 10px;
     font-size: 16px;
-    color: #444;
+    color: #333;
 }
 
-@media (max-width: 768px) {
-
-    h1 {
-        font-size: 35px;
-    }
-
-    .container {
-        grid-template-columns: 1fr;
-    }
-
-    .card img {
-        height: 250px;
-        width: 100%;
-        margin: 0 auto;
-    }
-
-
-
+.image-container {
+    display: flex;
 }
 
-@media (min-width: 769px) and (max-width: 1023px) {
-    h1 {
-        font-size: 56px;
-    }
-
-    .container {
-        grid-template-columns: 1fr 1fr;
-    }
-
-
-    .card img {
-        height: 275px;
-        object-fit: cover;
-    }
+.image-left,
+.image-right {
+    position: relative;
+    width: 100%;
 }
 
+.image-left img,
+.image-right img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+
+
+/* Footer */
 
 .footer {
-    background-color: #CDC1FF;
+    background-color: #f7f7f7;
     padding: 40px 20px;
     font-family: "Afacad Flux", sans-serif;
-    color: #333;
+    color: #000000;
     text-align: center;
 }
 
@@ -204,7 +244,7 @@ h4 {
 
 .footer-section p {
     font-size: 16px;
-    color: #666;
+    color: #000000;
 }
 
 .footer-links {
@@ -264,69 +304,9 @@ h4 {
 
 .footer-bottom p {
     font-size: 16px;
-    color: #666;
+    color: #000000;
 }
 
-
-.container {
-    text-align: center;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-
-
-.grid {
-    display: flex;
-    justify-content: space-around;
-    gap: 20px;
-}
-
-.item {
-    text-align: center;
-}
-
-.item img {
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-    border-radius: 5px;
-    transition: transform 0.3s ease;
-}
-
-.item img:hover {
-    transform: scale(1.05);
-}
-
-.item p {
-    margin-top: 10px;
-    font-size: 16px;
-    color: #333;
-}
-
-@media (max-width: 768px) {
-    .grid {
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
-.image-container {
-    display: flex;
-}
-
-.image-left,
-.image-right {
-    position: relative;
-    width: 100%;
-}
-
-.image-left img,
-.image-right img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
 
 .text-overlay {
     position: absolute;
@@ -355,4 +335,246 @@ header {
     background-color: #fff;
     padding: 10px 0;
     border-bottom: 1px solid #ddd;
+}
+
+
+/* Media Queries */
+@media (max-width: 320px) {
+    h1 {
+        font-size: 32px;
+    }
+
+    h2 {
+        font-size: 24px;
+    }
+
+    h3 {
+        font-size: 20px;
+    }
+
+
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-links {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card {
+        padding: 15px;
+    }
+
+    .footer-top {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main-image {
+        display: none;
+    }
+
+    .text-overlay p {
+        display: none;
+    }
+
+    .text-overlay h2 {
+        font-size: 16px;
+        padding: 2px;
+    }
+
+    .nav-links {
+        display: none;
+        /* Hide the nav links initially */
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background-color: white;
+        padding: 20px;
+    }
+
+    .nav-links.active {
+        display: flex;
+        /* Show the nav links when the hamburger is clicked */
+    }
+
+    .hamburger-menu {
+        display: flex;
+        /* Display the hamburger menu icon on smaller screens */
+    }
+}
+
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 35px;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card img {
+        height: 330px;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .grid {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-links {
+        display: none;
+        /* Hide the nav links initially */
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background-color: rgb(255, 255, 255);
+        padding: 20px;
+    }
+
+    .nav-links.active {
+        display: flex;
+        /* Show the nav links when the hamburger is clicked */
+    }
+
+    .hamburger-menu {
+        display: flex;
+        /* Display the hamburger menu icon on smaller screens */
+    }
+
+    .footer-top {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-links {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .text-overlay p {
+        display: none;
+    }
+
+    .text-overlay h2 {
+        font-size: 16px;
+        padding: 2px;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1023px) {
+    h1 {
+        font-size: 56px;
+    }
+
+    .container h2 {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 20px;
+        display: block;
+    }
+
+    .grid {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-around;
+        margin-top: 20px;
+        /* Separate the grid items from h2 */
+    }
+
+    .item {
+        flex-basis: calc(50% - 20px);
+        /* Adjust the width of the items */
+        margin-bottom: 20px;
+    }
+
+    .card img {
+        height: 375px;
+        object-fit: cover;
+    }
+
+    .nav-links {
+        display: none;
+        /* Hide the nav links initially */
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background-color: rgb(255, 255, 255);
+        padding: 20px;
+    }
+
+    .nav-links.active {
+        display: flex;
+        /* Show the nav links when the hamburger is clicked */
+    }
+
+    .hamburger-menu {
+        display: flex;
+        /* Display the hamburger menu icon on smaller screens */
+    }
+}
+
+
+@media (min-width: 1024px) and (max-width: 1600px) {
+    h1 {
+        font-size: 64px;
+    }
+
+
+    .grid {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+
+    .container h2 {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 20px;
+        display: block;
+    }
+
+    .grid {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-around;
+        margin-top: 20px;
+        /* Separate the grid items from h2 */
+    }
+
+    .item {
+        flex-basis: calc(50% - 20px);
+        /* Adjust the width of the items */
+        margin-bottom: 20px;
+    }
+}
+
+/* Footer Styles for larger screens */
+@media (min-width: 1024px) {
+    .footer-links {
+        justify-content: space-between;
+    }
+
+    .footer-top {
+        justify-content: space-between;
+    }
+
+    .footer-column ul {
+        padding: 0 20px;
+    }
 }
