--- a/style.css
+++ b/style.css
@@ -124,12 +124,14 @@ h4 {
 }
 
 .hamburger-menu .bar {
-    width: 100%;
-    height: 3px;
-    background-color: #333;
-    border-radius: 2px;
-    transition: transform 0.3s ease, background-color 0.3s ease;
+    width: 30px; 
+    height: 4px; 
+    background-color: #333; 
+    border-radius: 2px; 
+    margin: 4px 0; 
+    transition: transform 0.3s
 }
+
 
 /* Hide Hamburger Menu on Desktop */
 @media (min-width: 769px) {
@@ -138,9 +140,8 @@ h4 {
     }
 }
 
-
 .hamburger-menu.menu-open .bar:nth-child(1) {
-    transform: translateY(9px) rotate(45deg); 
+    transform: translateY(8px) rotate(45deg); 
 }
 
 .hamburger-menu.menu-open .bar:nth-child(2) {
@@ -148,9 +149,8 @@ h4 {
 }
 
 .hamburger-menu.menu-open .bar:nth-child(3) {
-    transform: translateY(-9px) rotate(-45deg); 
+    transform: translateY(-8px) rotate(-45deg); 
 }
-
 
 
 /* Container */
